# lspp

./: CMakeLists.txt  CMakePresets.json  README.md  lspp.cpp
include/: Comparator.h  Directory.h  Item.h  ItemType.h  Measurer.h  Predicate.h  Prioritizer.h  SortContext.h  Sorting.h  TypeUnion.h  cmp_pair.h  lspp_config.h  lspp_flag.h  priority.h  quick_sort.h  sort_flags.h  str_sort_key.h
include/cmp/: normal.h  reversed.h
include/compare/: all.h  normal.h  reversed.h
include/fn/: directory_size.h  make_setter_map.h  print_content.h  scan_directory.h  str_sort_key.h
include/measure/: all.h  discard.h  files.h  none.h  recursive.h  shallow.h
include/predicate/: all.h  by_name.h  by_name_ci.h  by_name_cs.h  by_size.h
include/priority/: all.h  directories.h  discard.h  files.h  none.h
include/strategy/: adapter.h  predicate.h  size.h  type.h
include/strategy/adapter/: ComparisonAdapter.h  Normal.h  Reversed.h
include/strategy/predicate/: ByName.h  ByNameCI.h  ByNameCS.h  BySize.h  PredicateStrategy.h
include/strategy/size/: Discard.h  NoSize.h  Recursive.h  Shallow.h  SizeStrategy.h  SkipDirectories.h
include/strategy/type/: DirectoriesFirst.h  Discard.h  FilesFirst.h  TypeStrategy.h
src/: Item.cpp  Sorting.cpp  lspp.cpp  priority.cpp  quick_sort.cpp  str_sort_key.cpp
src/fn/: directory_size.cpp  make_setter_map.cpp  print_content.cpp  scan_directory.cpp  str_sort_key.cpp
src/size/: recursive.cpp
src/strategy/predicate/: ByName.cpp
src/strategy/size/: Recursive.cpp
